Some fixes in .htaccess with required parameters on the backend

--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,12 @@
 RewriteEngine on
-RewriteRule ^live/?$ /heures [L,R=301]
-RewriteRule ^live/(\d+)/?$ /heures/$1 [L,R=301]
-RewriteRule ^live/(\d+)/([^&/]+)/? /heures/$1/$2 [L,R=301]
-RewriteRule ^(?:hours|heures)$ /index.php?menu=live&list=pages [QSA,L]
-RewriteRule ^(?:hours|heures)/(\d+)/?$ /index.php?menu=live&date=$1&list=pages [QSA,L]
-RewriteRule ^(?:hours|heures)/(\d+)/([^&/]+)/?$ /index.php?menu=live&date=$1&list=$2 [QSA,L]
+RewriteRule ^hours/?$ /index.php?menu=live&list=pages [QSA,L]
+RewriteRule ^hours/(\d+)/?$ /index.php?menu=live&date=$1&list=pages&sort=weight [QSA,L]
+RewriteRule ^hours/(\d+)/([^&/]+)/?$ /index.php?menu=live&date=$1&list=$2&sort=weight [QSA,L]
 RewriteRule ^(?:grid|grille)/?$ /index.php?menu=grid [QSA,L]
 RewriteRule ^(?:grid|grille)/(\d+)/?$ /index.php?menu=grid&date=$1 [QSA,L]
 RewriteRule ^(?:calendar|calendrier)$ /index.php?menu=dates&list=pages [QSA,L]
-RewriteRule ^date/(\d+)/?$ /index.php?menu=dates&date=$1&list=pages [QSA,L]
-RewriteRule ^date/(\d+)/([^&/]+)/?$ /index.php?menu=dates&date=$1&list=$2 [QSA,L]
+RewriteRule ^date/(\d+)/?$ /index.php?menu=dates&date=$1&list=pages&sort=weight [QSA,L]
+RewriteRule ^date/(\d+)/([^&/]+)/?$ /index.php?menu=dates&date=$1&list=$2&sort=weight [QSA,L]
 RewriteRule ^(?:users|utilisateurs)$ /index.php?menu=userstats [QSA,L]
 RewriteRule ^(?:user|utilisateur)/?$ /index.php?menu=userstats [QSA,L]
 RewriteRule ^(?:user|utilisateur)/([^&]+)$ /index.php?menu=userstats&user=$1 [QSA,L]
